Render csv text on the server

--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,10 @@
   <body>
     <div>
       <form action="/" method="POST" name="form-name" enctype="application/json">
-        <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"></textarea>
-        <input type="submit" value="Submit"></input>
+        <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"><!--json--></textarea>
+        <input type="submit" value="Convert"></input>
       </form>
+      <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"><!--csv--></textarea>
     </div>
     <script src="server.js"></script>
   </body>
