Complete CSV Report Generator

--- a/views/index.html
+++ b/views/index.html
@@ -9,8 +9,9 @@
         <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"><!--json--></textarea>
         <input type="submit" value="Convert"></input>
       </form>
-      <textarea id="textarea-json" name="textarea-json" rows="20" cols="20"><!--csv--></textarea>
+      <textarea id="textarea-csv" name="textarea-json" rows="20" cols="20"><!--csv--></textarea>
     </div>
-    <script src="server.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src='client.js'></script>
   </body>
 </html>
